# Minix-Shell

./: CMakeLists.txt  builtins.c  mshell  mshell.c  utils.c
include/: siparse.h  utils.h
inputParse/: siparse.y  siparseutils.c  siparseutils.h  y.tab.c
oldVersion/: 4wersja.cpp  mshell.c  old.c  poTrzechEtapach.c
planProjektu/: etap3.txt
tests/test3/input/: 5.in  6.in
tests/test4/Test/: core.9017
tests/test4/output/: 1.out  4.err  6.out  7.out
tests/test4/src/: fdcounter.c
tests/testShell/: res.out
tests/testShell/suites/1/output/: 1.out  11.out  12.err  12.out  13.out  14.out  15.out  2.out  3.out
tests/testShell/suites/2/input/: 5.in  6.in
tests/testShell/suites/2/output/: 4.out
tests/testShell/suites/3/output/: 1.err  3.out  5.out
tests/testShell/suites/4/output/: 1.out
